--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>BOOTCAMP 2020</h1>
     <h2>Hello World from Arsalan Raza Azmi</h2>
     <p>Website deployed using GitHub Actions.</p>
-    <p>Surge deployment successfull.</p>
+    <p>Surge Deployment Successfull.</p>
+    <p>Assignment#1 completed</p>
 </body>
 </html>
