--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
     <title>Bootcamp 2020</title>
 </head>
 <style>
-    h1{
-    color:white;
-    background-color: rgb(48, 47, 47);
-    text-align: center;
-    padding:10px;
+    .App-header {
+        text-align: center;
+        background-color: rgb(66, 66, 66);
+        color: white;
+        padding: 20px;
+        margin: 0;
+        font-size: 44px;
+    }
+    .App {
+        text-align: center;
+        background-color: rgb(102, 101, 101);
+        padding: 10px;
+        font-size: 38px;
+        color: white;
     }
 </style>
 <body>
-    <h1>BOOTCAMP 2020</h1>
-    <h2>Hello World from Arsalan Raza Azmi</h2>
-    <p>Website deployed using GitHub Actions.</p>
-    <p>Surge Deployment Successfull.</p>
-    <p>Assignment#1 completed</p>
+    <div>
+        <h1 class="App-header">BOOTCAMP 2020</h1>
+        <h1 class="App">Assignment#1: Website Development Environment Setup</h1>
+        <h2>Hello World</h2>
+        <p>Website deployed using GitHub Actions.</p>
+        <p>Surge Deployment Successfully performed.</p>
+        <p>Assignment#1 completed by <b>Arsalan Raza Azmi</b>.</p>
+    </div>
+</body>
 </body>
 </html>
